--- a/myonlinestore.html
+++ b/myonlinestore.html
@@ -89,7 +89,7 @@
     <section id="contacts">
         <h1>Contact Us</h1>
         <p>Cellphone Number: 09123345671</p>
-        <p> Email:<a href="heinsaplayas@gmail.com"> Kicks@gmail.com</a> </p>
+        <p> Email:<a href="heinsaplayas@gmail.com"> heinsaplayas@gmail.com</a> </p>
 
 
     </section>
