--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <hr>
 
     <footer style="text-align: center;">
-    <p style="font-weight: bold;"> All Right Reserved &copy; Heins Y. Aplaya</p>
+    <p style="font-weight: bold;"> &copy;All Rights Reserved </p> <p style="font-weight: bold;">Heins Y. Aplaya</p>
     <a href="#top">Back to Top</a>
 
     </footer>
